<resources>
    <string name="app_name">隣で作業</string>
    <string name="hello">RoBoHoN 隣で作業</string>
    <string name="default_mode_text">どのくらい作業する？</string>
    <string name="recog_label_text">入力</string>
    <string name="default_text">--RECOG_TEXT--</string>
    <string name="button_voice_accost">ACCOST</string>
    <string name="button_resolve_variable">RESOLVE VARIABLE</string>
    <string name="button_set_memoryP">SET_Memory_p</string>
    <string name="button_get_memoryP">Get_memory_p</string>
    <string name="button_finish_app">終了</string>
    <string name="hours">時間</string>
    <string name="input_text">入力単語</string>
    <string name="output_text">出力単語</string>
    <string name="button_voice_translate">翻訳</string>
    <string name="default_output_text">翻訳結果</string>
    <string name="default_input_text">入力単語</string>
    <string name="oneHourButton_text">1時間</string>
    <string name="twoHoursButton_text">2時間</string>
    <string name="noLimitButton_text">時間指定無し</string>
    <string name="selectButton_text">決定</string>
    <string name="mainactivity_content_text1">セッション時間を選択してね！</string>
    <string name="sessionactivity_text1">今の状態</string>
    <string name="sessionactivity_text2">終了予定時刻：</string>
    <string name="default_timeroutput_text">00:00:00</string>
    <string name="default_timeroutput_text2">12時12分</string>
    <string name="showactivity_text1">作業した時間:5時間55分55秒</string>
    <string name="showactivity_imgdsc">描けた絵</string>
    <string name="showactivity_default_text">過ぎた時間</string>
    <string name="sessionActivity_defShowStatus_text">status</string>
    <string name="sessionActivity_ShiftPhaseText">フェイズ変更</string>
    <string name="button_finish_session">セッション終了</string>
    <string name="button_show_result">プロジェクター表示</string>
    <string name="showactivity_default_text2">00:00:00</string>
    <string name="start_projector_button">プロジェクター開始ボタン</string>
    <string name="stop_projector_button">プロジェクター停止ボタン</string>
</resources>
