<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_activity"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_mode_text"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="27dp">

        <NumberPicker
            android:id="@+id/numPicker"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="110dp"
            android:scaleX="1.6"
            android:scaleY="1.6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/hours"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="0dp"
        android:singleLine="false"
        android:text="@string/selectButton_text"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/noLimit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:singleLine="false"
            android:text="@string/noLimitButton_text"
            android:textSize="32sp" />
        <Button
            android:id="@+id/finish_app_button"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginStart="50dp"
            android:singleLine="false"
            android:text="@string/button_finish_app"
            android:textSize="32sp" />
    </LinearLayout>
</LinearLayout>
